--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,7 @@
 body {
 	width: 100%;
 	height: 100%;
+	overflow-x: hidden;
 }
 
 .navbar {
@@ -20,6 +21,46 @@ body {
 .bi {
 	cursor: pointer;
 }
-.leftHero {
+
+.btn-success {
+	padding: 12px 24px 14px 24px;
+	border-radius: 200px;
+}
+
+.btn-outline-success {
+	padding: 12px 22px 14px 22px;
+	border-radius: 200px;
+}
+
+.buttons {
+	a {
+		margin-right: 36px;
+	}
+}
+
+.hero {
+	height: 100%;
 	background-color: $beige;
+	&__content {
+		width: 70%;
+		h1 {
+			font-family: Montserrat;
+			font-size: 60px;
+			font-style: normal;
+			font-weight: 500;
+			line-height: 70px; /* 116.667% */
+		}
+		p {
+			font-family: Inter;
+			font-size: 16px;
+			font-style: normal;
+			font-weight: 400;
+			line-height: 150%; /* 24px */
+		}
+	}
+}
+.carousel-item {
+	img {
+		max-height: 840px;
+	}
 }
