--- a/sass/style.scss
+++ b/sass/style.scss
@@ -264,6 +264,12 @@ body {
 		}
 	}
 }
+.grid-item {
+	width: 200px;
+	img {
+		width: 100%;
+	}
+}
 @media (max-width: 575.98px) {
 	.hero {
 		&__content {
