--- a/css/style.css
+++ b/css/style.css
@@ -12229,11 +12229,24 @@ body {
   line-height: 115%;
 }
 
+.grid {
+  margin: 0 auto;
+}
+
 .grid-item {
-  width: 200px;
+  width: 451px;
+  margin-bottom: 43px;
+}
+.grid-item--height1 {
+  height: 601px;
 }
 .grid-item img {
   width: 100%;
+  height: 100%;
+}
+
+.bla {
+  padding: 120px 0px 44px 0px;
 }
 
 @media (max-width: 575.98px) {
