--- a/sass/style.scss
+++ b/sass/style.scss
@@ -264,12 +264,25 @@ body {
 		}
 	}
 }
+.grid {
+	margin: 0 auto;
+}
 .grid-item {
-	width: 200px;
+	width: 451px;
+	margin-bottom: 43px;
+	&--height1 {
+		height: 601px;
+	}
 	img {
 		width: 100%;
+		height: 100%;
 	}
 }
+
+.bla {
+	padding: 120px 0px 44px 0px;
+}
+
 @media (max-width: 575.98px) {
 	.hero {
 		&__content {
