--- a/css/style.css
+++ b/css/style.css
@@ -12001,6 +12001,13 @@ body {
 .bi-stars {
   font-size: 30px;
 }
+.bi-x-lg {
+  position: absolute;
+  right: 20%;
+  cursor: pointer;
+  color: rgb(255, 255, 255);
+  font-size: 30px;
+}
 
 .btn-success {
   padding: 12px 24px 14px 24px;
@@ -12206,6 +12213,7 @@ body {
 }
 
 .projects {
+  position: relative;
   padding: 120px 0px 44px 0px;
   background-color: rgb(220, 193, 171);
 }
@@ -12228,25 +12236,55 @@ body {
   font-weight: 500;
   line-height: 115%;
 }
+.projects__gridWrapper {
+  padding: 120px 0px 44px 0px;
+}
+.projects__fade {
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 900px;
+  background-image: linear-gradient(360deg, #dcc1ab 0%, rgba(214, 183, 158, 0) 100%);
+}
+.projects--button {
+  padding: 12px 22px 14px 22px;
+}
+
+.modalImage {
+  width: 80vh;
+  height: 90vh;
+}
 
 .grid {
+  overflow: hidden;
   margin: 0 auto;
 }
 
 .grid-item {
   width: 451px;
   margin-bottom: 43px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transform: scale(1.05);
+  transition: all 0.4s;
+  cursor: pointer;
 }
 .grid-item--height1 {
   height: 601px;
+}
+.grid-item--height3 {
+  height: 451px;
 }
 .grid-item img {
   width: 100%;
   height: 100%;
 }
-
-.bla {
-  padding: 120px 0px 44px 0px;
+.grid-item:hover {
+  filter: blur(1px);
+  transform: scale(1.01);
 }
 
 @media (max-width: 575.98px) {
@@ -12282,6 +12320,13 @@ body {
   }
   .about__content {
     width: 90%;
+    text-align: center;
+  }
+  .grid-item {
+    width: 345px;
+  }
+  .projects__top {
+    padding-left: 0;
     text-align: center;
   }
 }
