--- a/sass/style.scss
+++ b/sass/style.scss
@@ -31,6 +31,13 @@ body {
 	&-stars {
 		font-size: 30px;
 	}
+	&-x-lg {
+		position: absolute;
+		right: 20%;
+		cursor: pointer;
+		color: $white;
+		font-size: 30px;
+	}
 }
 
 .btn-success {
@@ -242,6 +249,7 @@ body {
 	}
 }
 .projects {
+	position: relative;
 	padding: 120px 0px 44px 0px;
 	background-color: $beige;
 	&__top {
@@ -263,24 +271,58 @@ body {
 			line-height: 115%;
 		}
 	}
+	&__gridWrapper {
+		padding: 120px 0px 44px 0px;
+	}
+	&__fade {
+		display: flex;
+		align-items: end;
+		justify-content: center;
+		position: absolute;
+		bottom: 0;
+		width: 100%;
+		height: 900px;
+		background-image: linear-gradient(
+			360deg,
+			#dcc1ab 0%,
+			rgba(214, 183, 158, 0) 100%
+		);
+	}
+	&--button {
+		padding: 12px 22px 14px 22px;
+	}
 }
+.modalImage {
+	width: 80vh;
+	height: 90vh;
+}
+
 .grid {
+	overflow: hidden;
 	margin: 0 auto;
 }
 .grid-item {
 	width: 451px;
 	margin-bottom: 43px;
+	object-fit: cover;
+	transform: scale(1.05);
+	transition: all 0.4s;
+	cursor: pointer;
+
 	&--height1 {
 		height: 601px;
+	}
+	&--height3 {
+		height: 451px;
 	}
 	img {
 		width: 100%;
 		height: 100%;
 	}
-}
-
-.bla {
-	padding: 120px 0px 44px 0px;
+	&:hover {
+		filter: blur(1px);
+		transform: scale(1.01);
+	}
 }
 
 @media (max-width: 575.98px) {
@@ -323,6 +365,15 @@ body {
 		}
 		&__content {
 			width: 90%;
+			text-align: center;
+		}
+	}
+	.grid-item {
+		width: 345px;
+	}
+	.projects {
+		&__top {
+			padding-left: 0;
 			text-align: center;
 		}
 	}
