--- a/css/style.css
+++ b/css/style.css
@@ -12214,7 +12214,7 @@ body {
 
 .projects {
   position: relative;
-  padding: 120px 0px 44px 0px;
+  padding: 120px 0px 45px 0px;
   background-color: rgb(220, 193, 171);
 }
 .projects__top {
@@ -12249,8 +12249,63 @@ body {
   height: 900px;
   background-image: linear-gradient(360deg, #dcc1ab 0%, rgba(214, 183, 158, 0) 100%);
 }
-.projects--button {
+.projects__fade--button {
   padding: 12px 22px 14px 22px;
+  margin-bottom: 66px;
+}
+
+.social {
+  padding: 60px 0px;
+}
+.social__wrapper {
+  padding: 120px 110px;
+  gap: 64px;
+}
+.social__contentLeft {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.social__contentLeft h4, .social__contentLeft .h4 {
+  font-family: Montserrat;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%; /* 48px */
+  letter-spacing: -2px;
+}
+.social__contentLeft h4 span, .social__contentLeft .h4 span {
+  font-family: Inter;
+  font-size: 40px;
+  font-style: italic;
+  font-weight: 500;
+  line-height: 120%;
+  letter-spacing: 1px;
+}
+.social__button {
+  padding: 10px 24px 12px 24px;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 80px 256px;
+  gap: 120px;
+  background-color: rgb(17, 17, 17);
+  color: rgb(255, 255, 255);
+}
+.footer__topRight {
+  gap: 24px;
+}
+.footer__wrapper {
+  gap: 62px;
+}
+.footer__nav {
+  gap: 48px;
+}
+.footer__contakt {
+  gap: 48px;
 }
 
 .modalImage {
@@ -12283,7 +12338,7 @@ body {
   height: 100%;
 }
 .grid-item:hover {
-  filter: blur(1px);
+  filter: blur(0.1px);
   transform: scale(1.01);
 }
 
@@ -12329,6 +12384,125 @@ body {
     padding-left: 0;
     text-align: center;
   }
+  .projects__fade {
+    bottom: 0;
+    width: 100%;
+    height: 1200px;
+  }
+  .social__wrapper {
+    padding: 50px 45px;
+    gap: 20px;
+  }
+  .social__contentLeft {
+    text-align: center;
+  }
+  .social__contentRight {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+  }
+  .footer {
+    padding: 80px 5px;
+  }
+  .footer__nav {
+    gap: 3px;
+  }
+  .footer__contact {
+    gap: 5px;
+  }
+  .footer__bottom {
+    text-align: center;
+  }
+  .modalImage {
+    width: 60vh;
+    height: 55vh;
+  }
+  .bi-x-lg {
+    right: 3%;
+  }
+  .grid-item--height1 {
+    height: 301px;
+  }
+  .grid-item--height3 {
+    height: 251px;
+  }
+  .grid-item img {
+    width: 100%;
+    height: 100%;
+  }
+  .grid-item:hover {
+    filter: blur(0.1px);
+    transform: scale(1.01);
+  }
+}
+@media (min-width: 575.98px) and (max-width: 767.98px) {
+  .hero__content h1, .hero__content .h1 {
+    font-size: 30px;
+    line-height: 28px;
+  }
+  .hero__content p {
+    line-height: 100%;
+  }
+  .carousel-item img {
+    max-height: 250px;
+  }
+  .offer {
+    padding: 25px 0px 160px 0px;
+    gap: 20px;
+  }
+  .offer__card {
+    width: 300px;
+    height: 310px;
+    padding: 28px 20px;
+  }
+  .offer__card:hover {
+    width: 310px;
+    height: 315px;
+  }
+  .about__right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(27, 91, 49);
+    width: 100%;
+  }
+  .about__content {
+    width: 90%;
+    text-align: center;
+  }
+  .grid-item {
+    width: 345px;
+  }
+  .projects__top {
+    padding-left: 0;
+    text-align: center;
+  }
+  .social__wrapper {
+    padding: 120px 45px;
+  }
+  .social__contentLeft {
+    text-align: center;
+  }
+  .social__contentRight {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+  }
+  .footer {
+    padding: 80px 10px;
+  }
+  .footer__nav {
+    gap: 5px;
+  }
+  .footer__contact {
+    gap: 5px;
+  }
 }
 @media (min-width: 767.98px) and (max-width: 1199.98px) {
   .hero__content h1, .hero__content .h1 {
@@ -12337,5 +12511,25 @@ body {
   }
   .hero__content p {
     line-height: 100%;
+  }
+  .social__wrapper {
+    padding: 120px 45px;
+  }
+  .social__contentLeft {
+    text-align: center;
+  }
+  .social__contentRight {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+  }
+  .footer {
+    padding: 80px 25px;
+  }
+  .footer__nav {
+    gap: 10px;
   }
 }/*# sourceMappingURL=style.css.map */
