--- a/sass/style.scss
+++ b/sass/style.scss
@@ -250,7 +250,7 @@ body {
 }
 .projects {
 	position: relative;
-	padding: 120px 0px 44px 0px;
+	padding: 120px 0px 45px 0px;
 	background-color: $beige;
 	&__top {
 		padding-left: 160px;
@@ -287,11 +287,68 @@ body {
 			#dcc1ab 0%,
 			rgba(214, 183, 158, 0) 100%
 		);
-	}
-	&--button {
-		padding: 12px 22px 14px 22px;
+		&--button {
+			padding: 12px 22px 14px 22px;
+			margin-bottom: 66px;
+		}
 	}
 }
+
+.social {
+	padding: 60px 0px;
+	&__wrapper {
+		padding: 120px 110px;
+		gap: 64px;
+	}
+	&__contentLeft {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		h4 {
+			font-family: Montserrat;
+			font-size: 40px;
+			font-style: normal;
+			font-weight: 400;
+			line-height: 120%; /* 48px */
+			letter-spacing: -2px;
+			span {
+				font-family: Inter;
+				font-size: 40px;
+				font-style: italic;
+				font-weight: 500;
+				line-height: 120%;
+				letter-spacing: 1px;
+			}
+		}
+	}
+	&__button {
+		padding: 10px 24px 12px 24px;
+	}
+}
+
+.footer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 80px 256px;
+	gap: 120px;
+	background-color: $black;
+	color: $white;
+	&__topRight {
+		gap: 24px;
+	}
+	&__wrapper {
+		gap: 62px;
+	}
+	&__nav {
+		gap: 48px;
+	}
+	&__contakt {
+		gap: 48px;
+	}
+}
+
 .modalImage {
 	width: 80vh;
 	height: 90vh;
@@ -320,7 +377,7 @@ body {
 		height: 100%;
 	}
 	&:hover {
-		filter: blur(1px);
+		filter: blur(0.1px);
 		transform: scale(1.01);
 	}
 }
@@ -376,6 +433,141 @@ body {
 			padding-left: 0;
 			text-align: center;
 		}
+		&__fade {
+			bottom: 0;
+			width: 100%;
+			height: 1200px;
+		}
+	}
+	.social {
+		&__wrapper {
+			padding: 50px 45px;
+			gap: 20px;
+		}
+		&__contentLeft {
+			text-align: center;
+		}
+		&__contentRight {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-direction: column;
+			text-align: center;
+			width: 100%;
+		}
+	}
+	.footer {
+		padding: 80px 5px;
+		&__nav {
+			gap: 3px;
+		}
+		&__contact {
+			gap: 5px;
+		}
+		&__bottom {
+			text-align: center;
+		}
+	}
+	.modalImage {
+		width: 60vh;
+		height: 55vh;
+	}
+	.bi-x-lg {
+		right: 3%;
+	}
+	.grid-item {
+		&--height1 {
+			height: 301px;
+		}
+		&--height3 {
+			height: 251px;
+		}
+		img {
+			width: 100%;
+			height: 100%;
+		}
+		&:hover {
+			filter: blur(0.1px);
+			transform: scale(1.01);
+		}
+	}
+}
+@media (min-width: 575.98px) and (max-width: 767.98px) {
+	.hero {
+		&__content {
+			h1 {
+				font-size: 30px;
+				line-height: 28px;
+			}
+			p {
+				line-height: 100%;
+			}
+		}
+	}
+	.carousel-item {
+		img {
+			max-height: 250px;
+		}
+	}
+	.offer {
+		padding: 25px 0px 160px 0px;
+		gap: 20px;
+		&__card {
+			width: 300px;
+			height: 310px;
+			padding: 28px 20px;
+			&:hover {
+				width: 310px;
+				height: 315px;
+			}
+		}
+	}
+	.about {
+		&__right {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background-color: $green;
+			width: 100%;
+		}
+		&__content {
+			width: 90%;
+			text-align: center;
+		}
+	}
+	.grid-item {
+		width: 345px;
+	}
+	.projects {
+		&__top {
+			padding-left: 0;
+			text-align: center;
+		}
+	}
+	.social {
+		&__wrapper {
+			padding: 120px 45px;
+		}
+		&__contentLeft {
+			text-align: center;
+		}
+		&__contentRight {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-direction: column;
+			text-align: center;
+			width: 100%;
+		}
+	}
+	.footer {
+		padding: 80px 10px;
+		&__nav {
+			gap: 5px;
+		}
+		&__contact {
+			gap: 5px;
+		}
 	}
 }
 @media (min-width: 767.98px) and (max-width: 1199.98px) {
@@ -388,6 +580,28 @@ body {
 			p {
 				line-height: 100%;
 			}
+		}
+	}
+	.social {
+		&__wrapper {
+			padding: 120px 45px;
+		}
+		&__contentLeft {
+			text-align: center;
+		}
+		&__contentRight {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-direction: column;
+			text-align: center;
+			width: 100%;
+		}
+	}
+	.footer {
+		padding: 80px 25px;
+		&__nav {
+			gap: 10px;
 		}
 	}
 }
