--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,12 +15,57 @@ body {
 		gap: 48px;
 	}
 	&__form {
+		position: relative;
+		display: flex;
 		margin-left: 1rem;
+		opacity: 0;
+		transition: all 0.5s ease-in;
+		label {
+			transition: all 0.5s ease-in;
+			position: relative;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			opacity: 0;
+			span {
+				position: absolute;
+				left: 80%;
+			}
+		}
+		&--input {
+			transition: all 0.5s ease-in;
+			width: 0%;
+		}
+		&.active {
+			opacity: 1;
+			label {
+				opacity: 1;
+				transition: all 0.5s ease-in;
+			}
+			.navbar__form--input {
+				transition: all 0.5s ease-in;
+				width: 100%;
+			}
+		}
 	}
 }
 .bi {
 	&-search {
 		cursor: pointer;
+		opacity: 1;
+		transition: all 0.5s ease-in;
+		&.active {
+			opacity: 0;
+			transition: all 0.5s ease-in;
+		}
+	}
+	&.prevImage {
+		position: absolute;
+		top: 50%;
+		left: 20%;
+		cursor: pointer;
+		font-size: 60px;
+		color: $white;
 	}
 	&-pencil-fill {
 		font-size: 30px;
@@ -84,11 +129,38 @@ body {
 }
 .carousel-control {
 	&-next {
+		top: 0;
+		bottom: 0;
+		left: 74%;
+		margin: auto 0;
+		height: 8%;
+		width: 4%;
+		background-color: $black;
+		opacity: 1;
+		border-radius: 50%;
+	}
+	&-prev {
+		top: 0;
+		bottom: 0;
+		left: 20%;
+		margin: auto 0;
+		height: 8%;
+		width: 4%;
+		background-color: $black;
+		opacity: 1;
+		border-radius: 50%;
+	}
+	&-next-hero {
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		position: absolute;
-		top: 85%;
+		top: 89%;
+		right: 0%;
+		width: 13%;
+		height: 11%;
+		border: none;
+		outline: none;
 		z-index: 5;
 		display: inline-block;
 		background-color: rgba(245, 240, 236, 1);
@@ -104,15 +176,19 @@ body {
 			&::after {
 				font-family: "Bootstrap-icons";
 				content: "\F138";
-				font-size: 45px;
+				font-size: 35px;
 				font-weight: 900;
 			}
 		}
 	}
-	&-prev {
+	&-prev-hero {
 		position: absolute;
-		top: 85%;
-		left: 70%;
+		top: 89%;
+		right: 13%;
+		width: 13%;
+		height: 11%;
+		border: none;
+		outline: none;
 		z-index: 5;
 		display: inline-block;
 		background-color: rgba(245, 240, 236, 1);
@@ -128,12 +204,13 @@ body {
 			&::after {
 				font-family: "Bootstrap-icons";
 				content: "\F12F";
-				font-size: 45px;
+				font-size: 35px;
 				font-weight: 900;
 			}
 		}
 	}
 }
+
 .offer {
 	display: flex;
 	align-items: center;
@@ -235,14 +312,14 @@ body {
 			font-size: 16px;
 			font-style: normal;
 			font-weight: 400;
-			line-height: 150%; /* 24px */
+			line-height: 150%;
 			letter-spacing: -0.16px;
 			&:first-child {
 				font-family: Inter;
 				font-size: 12px;
 				font-style: normal;
 				font-weight: 400;
-				line-height: 150%; /* 18px */
+				line-height: 150%;
 				letter-spacing: -0.12px;
 			}
 		}
@@ -282,14 +359,23 @@ body {
 		bottom: 0;
 		width: 100%;
 		height: 900px;
+		transition: all 0.5s ease-in;
 		background-image: linear-gradient(
 			360deg,
 			#dcc1ab 0%,
 			rgba(214, 183, 158, 0) 100%
 		);
 		&--button {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			font-family: "Bootstrap-icons";
 			padding: 12px 22px 14px 22px;
-			margin-bottom: 66px;
+			margin-bottom: 32px;
+		}
+		&.unActive {
+			transition: all 0.2s ease-in;
+			height: 0;
 		}
 	}
 }
@@ -310,7 +396,7 @@ body {
 			font-size: 40px;
 			font-style: normal;
 			font-weight: 400;
-			line-height: 120%; /* 48px */
+			line-height: 120%;
 			letter-spacing: -2px;
 			span {
 				font-family: Inter;
@@ -357,6 +443,9 @@ body {
 .grid {
 	overflow: hidden;
 	margin: 0 auto;
+	&__lower {
+		display: none;
+	}
 }
 .grid-item {
 	width: 451px;
@@ -397,6 +486,13 @@ body {
 	.carousel-item {
 		img {
 			max-height: 250px;
+		}
+	}
+	.modalCarusel {
+		img {
+			width: 60vh;
+			height: 85vh;
+			max-height: 500px;
 		}
 	}
 	.offer {
@@ -489,6 +585,95 @@ body {
 		&:hover {
 			filter: blur(0.1px);
 			transform: scale(1.01);
+		}
+	}
+	.carousel-control {
+		&-next {
+			top: 40px;
+			bottom: 0;
+			left: 85%;
+			margin: auto 0;
+			height: 40px;
+			width: 40px;
+			opacity: 0.5;
+			border-radius: 50%;
+			&-icon {
+				background-size: 70% 100%;
+				background-position: 66%;
+			}
+		}
+		&-prev {
+			top: 40px;
+			bottom: 0;
+			left: 0%;
+			margin: auto 0;
+			height: 40px;
+			width: 40px;
+			opacity: 0.5;
+			border-radius: 50%;
+			&-icon {
+				background-size: 70% 100%;
+				background-position: 50%;
+			}
+		}
+		&-next-hero {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			position: absolute;
+			top: 89%;
+			right: 0%;
+			width: 13%;
+			height: 11%;
+			border: none;
+			outline: none;
+			z-index: 5;
+			display: inline-block;
+			background-color: rgba(245, 240, 236, 1);
+			opacity: 1;
+			&-icon {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				height: 100%;
+				width: 100%;
+				color: black;
+				background-image: none;
+				&::after {
+					font-family: "Bootstrap-icons";
+					content: "\F138";
+					font-size: 35px;
+					font-weight: 900;
+				}
+			}
+		}
+		&-prev-hero {
+			position: absolute;
+			top: 89%;
+			right: 13%;
+			width: 13%;
+			height: 11%;
+			border: none;
+			outline: none;
+			z-index: 5;
+			display: inline-block;
+			background-color: rgba(245, 240, 236, 1);
+			opacity: 1;
+			&-icon {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				height: 100%;
+				width: 100%;
+				color: black;
+				background-image: none;
+				&::after {
+					font-family: "Bootstrap-icons";
+					content: "\F12F";
+					font-size: 35px;
+					font-weight: 900;
+				}
+			}
 		}
 	}
 }
