--- a/css/style.css
+++ b/css/style.css
@@ -12452,7 +12452,7 @@ body {
 .show {
   opacity: 1;
   filter: blur(0);
-  transform: translateY(0);
+  transform: translateY(0%);
 }
 
 @media (max-width: 575.98px) {
@@ -12961,6 +12961,6 @@ body {
     transform: translateY(10%);
   }
   .show {
-    transform: translateY(0);
+    transform: translateY(0%);
   }
 }/*# sourceMappingURL=style.css.map */
