--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,8 +24,17 @@ body {
 		display: flex;
 		margin-left: 1rem;
 		opacity: 0;
+		-webkit-transition: all 0.5s ease-in;
+		-moz-transition: all 0.5s ease-in;
+		-ms-transition: all 0.5s ease-in;
+		-o-transition: all 0.5s ease-in;
 		transition: all 0.5s ease-in;
+
 		label {
+			-webkit-transition: all 0.5s ease-in;
+			-moz-transition: all 0.5s ease-in;
+			-ms-transition: all 0.5s ease-in;
+			-o-transition: all 0.5s ease-in;
 			transition: all 0.5s ease-in;
 			position: relative;
 			display: flex;
@@ -38,6 +47,10 @@ body {
 			}
 		}
 		&--input {
+			-webkit-transition: all 0.5s ease-in;
+			-moz-transition: all 0.5s ease-in;
+			-ms-transition: all 0.5s ease-in;
+			-o-transition: all 0.5s ease-in;
 			transition: all 0.5s ease-in;
 			width: 0%;
 		}
@@ -45,9 +58,17 @@ body {
 			opacity: 1;
 			label {
 				opacity: 1;
+				-webkit-transition: all 0.5s ease-in;
+				-moz-transition: all 0.5s ease-in;
+				-ms-transition: all 0.5s ease-in;
+				-o-transition: all 0.5s ease-in;
 				transition: all 0.5s ease-in;
 			}
 			.navbar__form--input {
+				-webkit-transition: all 0.5s ease-in;
+				-moz-transition: all 0.5s ease-in;
+				-ms-transition: all 0.5s ease-in;
+				-o-transition: all 0.5s ease-in;
 				transition: all 0.5s ease-in;
 				width: 100%;
 			}
@@ -58,9 +79,17 @@ body {
 	&-search {
 		cursor: pointer;
 		opacity: 1;
+		-webkit-transition: all 0.5s ease-in;
+		-moz-transition: all 0.5s ease-in;
+		-ms-transition: all 0.5s ease-in;
+		-o-transition: all 0.5s ease-in;
 		transition: all 0.5s ease-in;
 		&.active {
 			opacity: 0;
+			-webkit-transition: all 0.5s ease-in;
+			-moz-transition: all 0.5s ease-in;
+			-ms-transition: all 0.5s ease-in;
+			-o-transition: all 0.5s ease-in;
 			transition: all 0.5s ease-in;
 		}
 	}
@@ -271,11 +300,19 @@ body {
 		height: 360px;
 		padding: 48px 40px;
 		border-radius: 28px;
+		-webkit-transition: all 0.5s ease-in;
+		-moz-transition: all 0.5s ease-in;
+		-ms-transition: all 0.5s ease-in;
+		-o-transition: all 0.5s ease-in;
 		transition: all 0.5s ease-in;
 		cursor: pointer;
 		&:hover {
 			width: 365px;
 			height: 360px;
+			-webkit-transition: all 0.2s ease-out;
+			-moz-transition: all 0.2s ease-out;
+			-ms-transition: all 0.2s ease-out;
+			-o-transition: all 0.2s ease-out;
 			transition: all 0.2s ease-out;
 			box-shadow: 0px 8px 16px rgba(38, 38, 38, 0.2);
 			top: -4px;
@@ -370,6 +407,10 @@ body {
 		bottom: 0;
 		width: 100%;
 		height: 900px;
+		-webkit-transition: all 0.5s ease-in;
+		-moz-transition: all 0.5s ease-in;
+		-ms-transition: all 0.5s ease-in;
+		-o-transition: all 0.5s ease-in;
 		transition: all 0.5s ease-in;
 		background-image: linear-gradient(
 			360deg,
@@ -385,6 +426,10 @@ body {
 			margin-bottom: 32px;
 		}
 		&.unActive {
+			-webkit-transition: all 0.2s ease-in;
+			-moz-transition: all 0.2s ease-in;
+			-ms-transition: all 0.2s ease-in;
+			-o-transition: all 0.2s ease-in;
 			transition: all 0.2s ease-in;
 			height: 0;
 		}
@@ -463,7 +508,12 @@ body {
 	margin-bottom: 43px;
 	object-fit: cover;
 	transform: scale(1.05);
+	-webkit-transition: all 0.4s;
+	-moz-transition: all 0.4s;
+	-ms-transition: all 0.4s;
+	-o-transition: all 0.4s;
 	transition: all 0.4s;
+
 	cursor: pointer;
 
 	&--height1 {
@@ -478,20 +528,36 @@ body {
 	}
 	&:hover {
 		filter: blur(0.1px);
+		-webkit-transform: scale(1.01);
+		-moz-transform: scale(1.01);
+		-ms-transform: scale(1.01);
+		-o-transform: scale(1.01);
 		transform: scale(1.01);
 	}
 }
 .hidden {
 	opacity: 0;
 	filter: blur(2px);
+	-webkit-transform: translateY(20%);
+	-moz-transform: translateY(20%);
+	-ms-transform: translateY(20%);
+	-o-transform: translateY(20%);
 	transform: translateY(20%);
+	-webkit-transition: all 1s;
+	-moz-transition: all 1s;
+	-ms-transition: all 1s;
+	-o-transition: all 1s;
 	transition: all 1s;
 }
 
 .show {
 	opacity: 1;
 	filter: blur(0);
-	transform: translateY(0);
+	-webkit-transform: translateY(0%);
+	-moz-transform: translateY(0%);
+	-ms-transform: translateY(0%);
+	-o-transform: translateY(0%);
+	transform: translateY(0%);
 }
 
 @media (max-width: 575.98px) {
@@ -611,6 +677,10 @@ body {
 		}
 		&:hover {
 			filter: blur(0.1px);
+			-webkit-transform: scale(1.01);
+			-moz-transform: scale(1.01);
+			-ms-transform: scale(1.01);
+			-o-transform: scale(1.01);
 			transform: scale(1.01);
 		}
 	}
@@ -704,9 +774,17 @@ body {
 		}
 	}
 	.hidden {
+		-webkit-transform: translateY(5%);
+		-moz-transform: translateY(5%);
+		-ms-transform: translateY(5%);
+		-o-transform: translateY(5%);
 		transform: translateY(5%);
 	}
 	.show {
+		-webkit-transform: translateY(0);
+		-moz-transform: translateY(0);
+		-ms-transform: translateY(0);
+		-o-transform: translateY(0);
 		transform: translateY(0);
 	}
 }
@@ -892,15 +970,23 @@ body {
 	}
 
 	.hidden {
+		-webkit-transform: translateY(10%);
+		-moz-transform: translateY(10%);
+		-ms-transform: translateY(10%);
+		-o-transform: translateY(10%);
 		transform: translateY(10%);
 	}
 	.show {
+		-webkit-transform: translateY(0);
+		-moz-transform: translateY(0);
+		-ms-transform: translateY(0);
+		-o-transform: translateY(0);
 		transform: translateY(0);
 	}
 }
 @media (min-width: 767.98px) and (max-width: 1199.98px) {
 	.navbar {
-		&__form{
+		&__form {
 			align-items: center;
 			justify-content: center;
 		}
@@ -1038,9 +1124,17 @@ body {
 	}
 
 	.hidden {
+		-webkit-transform: translateY(10%);
+		-moz-transform: translateY(10%);
+		-ms-transform: translateY(10%);
+		-o-transform: translateY(10%);
 		transform: translateY(10%);
 	}
 	.show {
-		transform: translateY(0);
+		-webkit-transform: translateY(0%);
+		-moz-transform: translateY(0%);
+		-ms-transform: translateY(0%);
+		-o-transform: translateY(0%);
+		transform: translateY(0%);
 	}
 }
